--- a/css/kol_cafe.css
+++ b/css/kol_cafe.css
@@ -50,7 +50,7 @@ footer span a { color: #FFF; }
 }
 
 .tm-text-brown {
-    color: #9c8d7f;
+    color: #c5c5c5;
 }
 
 .tm-text-green {
@@ -126,6 +126,44 @@ textarea::-ms-input-placeholder { /* Microsoft Edge */
     font-size: 1.2rem;
     line-height: 2rem;
 }
+#menu-title{
+    margin-top: 40px;
+
+    
+}
+ #gig-title{
+    margin-top: 40px;
+
+    
+}
+#menu{
+    margin-bottom: 0px;
+    
+}
+swiper-container {
+    width:  90%;
+  }
+
+
+
+   #gig {
+   height: 200px;
+    
+    position: relative;
+}
+
+#gig video {
+    /* top: 37.8%; */
+    
+  width: 100%;
+  height: 154.2%;
+  position: absolute;
+  object-fit: cover;
+  z-index: 0;
+  filter: brightness(50%);
+  color: rgba(0, 0, 0, 0.555);
+    mix-blend-mode: overlay;
+}
 
 @media (min-width: 768px) {
     #tm-nav.scroll .tm-container {
@@ -146,29 +184,25 @@ textarea::-ms-input-placeholder { /* Microsoft Edge */
     .parallax-window {
         min-height: 650px;
     }
+    #gig video {
+        /* top:  50%; */
+        bottom: -23.5%;
+        
+      /* width: 100%; */
+      height: 123.5%;
+      position: absolute;
+      object-fit: cover;
+      z-index: 0;
+      filter:brightness(40%);
+      color: rgb(0, 0, 0);
+        mix-blend-mode: overlay;
+    }
+    #gig {
+        height: 100px;
+         
+         position: relative;
+     }
    
 }
 
-
-#menu-title{
-    margin-top: 40px;
-    
-}
-#menu{
-    margin-bottom: 0px;
-    
-}
-swiper-container {
-    width:  90%;
-  }
-
-video {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    filter: brightness(80%);
-   width: 100%;
-    color: rgba(0, 0, 0, 0.555);
-    mix-blend-mode: overlay;
-   }
 
